# alexa-voice-service-integration-for-aws-iot-freertos-porting-kit

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
demos/aia/: aia_sample_app.c  aia_sample_app.h  aia_sample_main.c
demos/aia/utils/aiaportaudiomicrophone/include/aiaportaudiomicrophone/: aia_portaudio_microphone.h
demos/aia/utils/aiaportaudiomicrophone/source/: aia_portaudio_microphone.c
patch/: AiaClientSDK_0deab3e0.patch  freertos_20200700_4e8219e0.patch
ports/Button/include/button/: aia_button_config.h
ports/Clock/include/clock/: aia_clock_config.h
ports/Clock/src/: aia_clock_config.c
ports/Common/include/common/: aia_common_config.h
ports/Crypto/include/crypto/: aia_crypto_config.h
ports/Crypto/src/: aia_crypto_config.c
ports/HTTP/include/http/: aia_http_config.h
ports/HTTP/src/: aia_http_config.c
ports/IoT/include/iot/: aia_iot_config.h
ports/IoT/src/: aia_iot_config.c
ports/LWA/include/lwa/: aia_lwa_config.h
ports/LWA/src/: aia_lwa_config.c
ports/Memory/include/memory/: aia_memory_config.h
ports/Microphone/include/microphone/: aia_microphone_config.h
ports/Registration/include/registration/: aia_registration_config.h
ports/Registration/src/: aia_registration_config.c
ports/Storage/include/storage/: aia_storage_config.h
ports/Storage/src/: aia_storage_config.c
ports/include/: aia_application_config.h  aia_capabilities_config.h  aia_config.h
